tests/harness/errors/102_dot_on_list_source_loc.eu
# Error: dot notation on a list — error should point to user's dot expression
xs: [1, 2, 3]
result: xs.first
